[package]
name = "toasty"
version = "0.1.0"
edition = "2021"

[features]
default = []
rust_decimal = [
	"dep:rust_decimal",
	"toasty-core/rust_decimal",
]
bigdecimal = [
	"dep:bigdecimal",
	"toasty-core/bigdecimal",
]
jiff = [
	"dep:jiff",
	"toasty-core/jiff",
]
serde = ["dep:serde_core"]


[dependencies]
toasty-macros.workspace = true
toasty-core.workspace = true

serde_core = { version = "1.0.221", optional = true }
bit-set.workspace = true
by_address.workspace = true
async-stream.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
tokio-stream.workspace = true
uuid.workspace = true
indexmap.workspace = true
index_vec.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
proptest.workspace = true
